# Toy-Rust-RPC

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
model/: Cargo.toml
model/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
worker/: Cargo.toml
worker/src/: main.rs
