[package]
name = "client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["full"] }
model = { path= "../model" }